Bug #16195: SHOW VARIABLES doesn't report correctly sql_warnings and sql_notes values

SQL_WARNINGS and SQL_NOTES were being displayed with SHOW_BOOL, but they
  are system variables that need SHOW_SYS to be used.


mysql-test/r/variables.result:
  Add new results
mysql-test/t/variables.test:
  Add new regression test
sql/set_var.cc:
  Fix display of sql_notes and sql_warnings in SHOW VARIABLES.